rm language, fix jump to ...
git-svn-id: https://project.camptocamp.com/svn/c2c_mapfish/c2cgeoportal/trunk@1544 42eb0e99-3e3d-0410-99bf-a43aee6ce3a3

--- a/c2cgeoportal/static/adminapp/css/admin.css
+++ b/c2cgeoportal/static/adminapp/css/admin.css
@@ -18,10 +18,19 @@ h1#header div {
 h1#header div.breadcrumb {
     float: right;
     font-size: 14px;
-    margin-right: 0;
-    margin-top: 20px;
+    margin-right: 15px;
+    margin-top: 6px;
     width: auto;
+}
+h1#header div.breadcrumb a {
+    font-size: 22px;
+}
+h1#header div.breadcrumb a span.ui-selectmenu-status {
+    padding: 0.25em;
 }
 .auth { 
     text-align: right; 
+}
+#languages {
+    display: none;
 }
